--- a/app/jade/_common/_content.jade
+++ b/app/jade/_common/_content.jade
@@ -28,12 +28,12 @@
                             .products__slideshow
                                 .products__slideshow-block
                                     a(href="#").products__slideshow-display
-                                        img(src="img/phone-big.jpg" alt="").products__slideshow-img
+                                        img(src="img/phone-big.jpg" alt="phone").products__slideshow-img
                                     ul.products__slideshow-thumbs
                                          - for (var j=0; j < 3; j++)
                                                 li.products__slideshow-item
                                                     a(href="#").products__slideshow-link
-                                                        img(src="img/phone-small.png").products__slideshow-thumb-img
+                                                        img(src="img/phone-small.png" alt="phone").products__slideshow-thumb-img
 
                                 .products__article
                                     .products__article-word Артикул
