--- a/app/jade/_common/_header.jade
+++ b/app/jade/_common/_header.jade
@@ -18,8 +18,8 @@ header.header
                 .logo__text cooltech
             .search
                 form.search__form
-                    input(name="" type="text" placeholder="Что будем искать").seach__form-input
-                    input(name="" type="submit" value="Найти").seach__form-submit
+                    input(name="search" type="text" placeholder="Что будем искать").seach__form-input
+                    input(name="search-submit" type="submit" value="Найти").seach__form-submit
             .menu
                 - var items = ["Карта проезда","История заказов","Корзина"]
                 ul.menu__list
