--- a/app/sass/_common/_sidebar.scss
+++ b/app/sass/_common/_sidebar.scss
@@ -45,9 +45,8 @@
         border-top: 0 none;
     }
 }
-.filter__title-link{
+.filter__title{
   color: #111;
-  font-size: 16px;
   line-height: 18px;
   margin-bottom: 18px;
   font-family: 'open_sanssemibold';
