--- a/app/jade/_common/_sidebar.jade
+++ b/app/jade/_common/_sidebar.jade
@@ -1,9 +1,4 @@
-<<<<<<< HEAD
-=======
-
-
->>>>>>> aa8e551bb5de987ba072294ca2c561c12c8e3fd1
-.sidebar
+article.sidebar
 
     - var items = ["Флагманы","Бюджетная линейка"]
     ul.categories__list
